kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shreegaud-app
  labels:
    app: shreegaud-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: shreegaud-app
